IGNITE-11155 Missed JVM options comment was added for exception