@@ -137,7 +137,8 @@ public abstract class GridUnsafe {
             return buf;
         }
         catch (ReflectiveOperationException e) {
-            throw new RuntimeException("JavaNioAccess#newDirectByteBuffer() method is unavailable.", e);
+            throw new RuntimeException("JavaNioAccess#newDirectByteBuffer() method is unavailable."
+                + FeatureChecker.JAVA_VER_SPECIFIC_WARN, e);
         }
     }
 
@@ -1452,8 +1453,7 @@ public abstract class GridUnsafe {
         }
         catch (ReflectiveOperationException e) {
             throw new RuntimeException(pkgName + ".misc.JavaNioAccess class is unavailable."
-                + "\nPlease make sure --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED was provided as JVM option." +
-                "\nSee https://apacheignite.readme.io/docs/getting-started#section-running-ignite-with-java-9-10-11 for more info", e);
+                + FeatureChecker.JAVA_VER_SPECIFIC_WARN, e);
         }
     }
 
@@ -1476,7 +1476,8 @@ public abstract class GridUnsafe {
             return mtd;
         }
         catch (ReflectiveOperationException e) {
-            throw new RuntimeException(miscPackage() + ".JavaNioAccess#newDirectByteBuffer() method is unavailable.", e);
+            throw new RuntimeException(miscPackage() + ".JavaNioAccess#newDirectByteBuffer() method is unavailable."
+                + FeatureChecker.JAVA_VER_SPECIFIC_WARN, e);
         }
     }
 
